fix($stylesheet): Center align Course Category cards

--- a/src/styles/_section_course_categories.scss
+++ b/src/styles/_section_course_categories.scss
@@ -15,6 +15,7 @@
 
 .course-category__list {
   @include make-row(true);
+  @include justify-content(center);
 }
 
 .course-category__list-item {
